fixing homepage x overflow

--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -11,7 +11,7 @@
 .back-button {
   font-size: 30px;
   font-weight: 200;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
   border: none;
   color: global-styles.$red;
   background: rgba(255, 255, 255, 0);
