--- a/src/components/footer/footer-form/footer-form.scss
+++ b/src/components/footer/footer-form/footer-form.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
-  width: 92vw;
+  width: 90vw;
   z-index: 999;
   margin-bottom: 2rem;
 
