--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
 .header {
   position: fixed;
   top: 0px;
-  width: 100%;
+  width: 100vw;
   padding-top: 5px;
   background-color: white;
   z-index: 9999;
