--- a/src/components/home-event-card/home-event-card.scss
+++ b/src/components/home-event-card/home-event-card.scss
@@ -1,7 +1,7 @@
 @use '../../global/global-styles.scss';
 
 .home-event-card {
-  margin: 3rem;
+  margin: 3rem 0;
   border-radius: 10px;
   overflow: hidden;
   align-items: center;
@@ -21,12 +21,18 @@
 @media screen and (min-width: 769px) {
 
   .home-event-card {
+    transition: all .2s ease-in-out;
+    transform: scale(1);
     margin: 0 3rem;
     width: 300px;
     height: 300px;
     border-radius: 10px;
     box-shadow: 3px 5px 20px rgba(0, 0, 0, .5);
     overflow: hidden;
+
+    &:hover {
+      transform: scale(1.05);
+    }
 
     .home-event-card-image {
       height: 60%;
