--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -31,7 +31,8 @@
 
   .sub-menu-item {
     p {
-      font-size: 18px;
+      font-size: 16px;
+      margin-bottom: .5rem;
       color: global-styles.$green;
     }
   }
