--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -15,8 +15,8 @@
   // justify-content: center;
 
   .low-emphasis-button {
-    font-size: 30px;
-    font-weight: 200;
+    font-size: 25px;
+    font-weight: 400;
     margin-bottom: 2rem;
     text-decoration: underline;
     text-decoration-color: global-styles.$blue;
