--- a/src/pages/home/get-involved/get-involved.scss
+++ b/src/pages/home/get-involved/get-involved.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // width: 96vw;
   text-align: center;
   margin-top: 4rem;
   background: linear-gradient(0, global-styles.$yellow 25%, white 25%);
@@ -26,7 +27,7 @@
     background-color: white;
     border-radius: 10px;
     color: black;
-    width: 80vw;
+    width: 75vw;
     height: 30vw;
     box-shadow: 3px 5px 20px rgba(0, 0, 0, .1);
     margin-bottom: 1rem;
