--- a/src/pages/home/our-sponsors/our-sponsors.scss
+++ b/src/pages/home/our-sponsors/our-sponsors.scss
@@ -21,7 +21,7 @@
     }
 
     .nash-logo-image {
-      width: 339px;
+      width: 250px;
       // height: 69px;
     }
 
